<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/wall">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logocaraka"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oleoscriptbold"
                android:text="@string/textSign_up"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textName"
                app:boxStrokeWidth="8dp"
                app:boxStrokeWidthFocused="8dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_bg"
                    android:ems="15"
                    android:drawableStart="@drawable/person"
                    android:hint="@string/textName"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:drawablePadding="15dp"
                    android:textColorHint="@android:color/transparent"
                    android:textSize="15sp"
                    android:textStyle="italic|bold"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEmail"
                app:boxStrokeWidth="8dp"
                app:boxStrokeWidthFocused="8dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/primary"
                android:paddingTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_bg"
                    android:ems="15"
                    android:drawableStart="@drawable/email"
                    android:hint="@string/textEmail"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:drawablePadding="15dp"
                    android:textColorHint="@android:color/transparent"
                    android:textSize="15sp"
                    android:textStyle="italic|bold"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordText"
                android:paddingTop="10dp"
                app:boxStrokeWidth="8dp"
                app:boxStrokeWidthFocused="8dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/primary"
                app:passwordToggleDrawable="@drawable/pass_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_bg"
                    android:drawableStart="@drawable/pass"
                    android:drawablePadding="15dp"
                    android:ems="15"
                    android:hint="@string/passwordText"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/transparent"
                    android:textSize="15sp"
                    android:textStyle="italic|bold"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPasswordconf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:paddingTop="10dp"
                app:boxStrokeWidth="8dp"
                app:boxStrokeWidthFocused="8dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/primary"
                app:passwordToggleDrawable="@drawable/pass_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_confirmpass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_bg"
                    android:drawableStart="@drawable/pass"
                    android:drawablePadding="15dp"
                    android:ems="15"
                    android:hint="Confirm Password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/transparent"
                    android:textSize="15sp"
                    android:textStyle="italic|bold">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/textSign_up"
                android:id="@+id/signup_button"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="20dp"
                android:textColor="@color/white"/>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="15dp"
                >
                <TextView
                    android:id="@+id/signup_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:textSize="15sp" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textSign_in"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/signin_google"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/text_sign_in_with_google"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:textColor="@color/white"/>
            <!-- PERLU DI EDIT DI BAGIAN INI-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>